# auto_typing

./: .gitignore  README.md  build.sh  capture_frames.py  config.yaml  phase1_keyboard_localization.py  setup.py  test_keyboard_localization.py
auto_typing/: config.yaml
auto_typing/calibration/: capture_calibration_board.py
auto_typing/logs/: phase1_log_20250521_174622.txt  phase1_log_20250521_174824.txt  phase1_log_20250521_210241.txt  phase1_log_20250521_210343.txt  phase1_log_20250521_210347.txt  phase1_log_20250521_210546.txt  phase1_log_20250521_210559.txt  phase1_log_20250521_210830.txt  phase1_log_20250521_210920.txt  phase1_log_20250521_210949.txt  phase1_log_20250521_211111.txt  phase1_log_20250521_211208.txt  phase1_log_20250521_211552.txt  phase1_log_20250521_211929.txt  phase1_log_20250521_212008.txt  phase1_log_20250521_212133.txt  phase1_log_20250521_212202.txt  phase1_log_20250521_212214.txt  phase1_log_20250521_212245.txt  phase1_log_20250521_212256.txt  phase1_log_20250521_212303.txt  phase1_log_20250521_212442.txt  (+24 more)
calibration/: calibrator.py
cpp_ext/: CMakeLists.txt
cpp_ext/include/motor_control/: motor_controller.hpp
cpp_ext/src/: bindings.cpp  motor_controller.cpp
gui/: READ_ME_GUI.txt  auto_typing_gui.py
phase1/: phase1_keyboard_localization.py  test_keyboard_localization.py
phase2/: phase2_camera_translation.py
tests/: capture_frames.py  test_keyboard_localization.py  test_motor_controller.py  test_phase1_full_pipeline.py  test_text_detection.py
utils/: calibrate_camera.py  capture_calibration_board.py
(+15 files in other folders)
